Horizontal scrollbar fix
Changed width to be max-width in body css. Don't understand why this
fixed it, but it did.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,11 +15,11 @@ html {
 body {
 	min-height: 100vh;
 	background-color: #1866a8;
-	width: 100vw;
+	max-width: 100vw;
 }
 
 a {
-	color: #888;
+	color: #3392e2;
 	text-decoration: none;
 }
 
